--- a/02-Python Statements/09-Guessing Game Challenge.ipynb
+++ b/02-Python Statements/09-Guessing Game Challenge.ipynb
@@ -35,6 +35,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "num = random.randint(0,101)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "58\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -46,6 +89,72 @@
    "source": [
     "#### Next, print an introduction to the game and explain the rules"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If a player's guess is less than 1 or greater than 100, say \"OUT OF BOUNDS\"  \n",
+      "\n",
+      "On a player's first turn, if their guess is within 10 of the number, return \"WARM!\" further than 10 away from the number, return \"COLD!\" \n",
+      "\n",
+      "On all subsequent turns, if a guess is closer to the number than the previous guess return \"WARMER!\" \n",
+      "\n",
+      "farther from the number than the previous guess, return \"COLDER!\" \n",
+      "\n",
+      "When the player's guess equals the number, tell them they've guessed correctly and how many guesses it took!\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\"\"If a player\\'s guess is less than 1 or greater than 100, say \\\"OUT OF BOUNDS\\\"  \\n\n",
+    "On a player\\'s first turn, if their guess is within 10 of the number, return \\\"WARM!\\\" further than 10 away from the number, return \\\"COLD!\\\" \\n\n",
+    "On all subsequent turns, if a guess is closer to the number than the previous guess return \\\"WARMER!\\\" \\n\n",
+    "farther from the number than the previous guess, return \\\"COLDER!\\\" \\n\n",
+    "When the player's guess equals the number, tell them they've guessed correctly and how many guesses it took!\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -65,10 +174,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "guess_list = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,14 +190,127 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guess a number!25\n",
+      "You won!\n"
+     ]
+    }
+   ],
+   "source": [
+    "guess = int(input(\"Guess a number!\"))\n",
+    "while guess >= 0 and guess <= 101:\n",
+    "    guess = input(\"Guess a number!\")\n",
+    "    pass\n",
+    "else:\n",
+    "    print(\"You won!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "73\n",
+      "Guess a number! 23\n",
+      "Guess a number! 4\n",
+      "Guess a number! 5\n",
+      "Guess a number! 6\n",
+      "Guess a number! 7\n",
+      "Guess a number! 8\n",
+      "Guess a number! 73\n",
+      "You've won!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "num = int(random.randint(0,101))\n",
+    "print(num)\n",
+    "guess_list = int(0)\n",
+    "guess = int(input(\"Guess a number! \"))\n",
+    "while guess != num:\n",
+    "    guess = int(input(\"Guess a number! \"))\n",
+    "if guess == num:\n",
+    "    print(\"You've won!\") \n",
+    "\n",
+    "    '''guess >= 0 and guess <= 101:\n",
+    "    guess = input(\"Guess again! \")\n",
+    "    guess_list = guess_list + 1\n",
+    "    pass\n",
+    "else:\n",
+    "    print(\"You won!\")'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "94\n",
+      "Guess a number! 89\n",
+      "Guess a number! 12\n",
+      "Guess a number! 22\n",
+      "Guess a number! 56\n",
+      "Guess a number! 97\n",
+      "Guess a number! 94\n",
+      "You've won! You guessed 5 number of times\n"
+     ]
+    }
+   ],
    "source": [
-    "while True:\n",
-    "    \n",
-    "    pass"
+    "import random\n",
+    "num = int(random.randint(0,101))\n",
+    "print(num)\n",
+    "guess_list = int(0)\n",
+    "guess = int(input(\"Guess a number! \"))\n",
+    "while guess != num:\n",
+    "    guess_list = guess_list + 1\n",
+    "    guess = int(input(\"Guess a number! \"))\n",
+    "if guess == num:\n",
+    "    print(\"You've won! You guessed %d number of times\" % (guess_list))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -146,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
