Today's progress so far

--- a/02-Python Statements/09-Guessing Game Challenge.ipynb
+++ b/02-Python Statements/09-Guessing Game Challenge.ipynb
@@ -317,15 +317,65 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here are the rules: \n",
+      "'Guess a number between 1 and 100.' \n",
+      "'We'll give you a hint if you need one.'\n",
+      "18\n",
+      "Guess a number! 17\n",
+      "WARM\n",
+      "Guess again: 22\n",
+      "WARM\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "print(\"Here are the rules: \\n'Guess a number between 1 and 100.' \\n'We'll give you a hint if you need one.'\")\n",
+    "num = int(random.randint(1,100))\n",
+    "print(num)\n",
+    "guess_count = int(1)\n",
+    "guess = int(input(\"Guess a number! \"))\n",
+    "orbit_greater = num + 10\n",
+    "orbit_less = num - 10\n",
+    "while guess != num:\n",
+    "    guess_count = guess_count + 1    \n",
+    "    if guess > num < orbit_greater:\n",
+    "        print(\"WARM\")\n",
+    "    if guess < num > orbit_less:\n",
+    "        print(\"WARM\")    \n",
+    "    if guess <= 0:\n",
+    "        print(\"Out of Bounds. Try again.\")\n",
+    "    if guess > 100:\n",
+    "        print(\"Out of Bounds. Try again.\")\n",
+    "    guess = int(input(\"Guess again: \"))\n",
+    "if guess == num:\n",
+    "    print(\"You've won! It took you %d tries, but you got it. \" % (guess_count))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "orbit_greater == num + 10\n",
+    "orbit_less == num - 10\n",
+    "\n",
+    "\"\"\"if guess is between num or orbit_greater:\n",
+    "    print(\"WARM\")\n",
+    "if guess is between num or orbit_greater:\n",
+    "    print(\"WARM\")\"\"\"\n",
+    "    \n",
+    "if guess > num < orbit_greater:\n",
+    "    print(\"WARM\")\n",
+    "if guess >  num < orbit_less:\n",
+    "    print(\"WARM\")"
+   ]
   },
   {
    "cell_type": "code",
