--- a/03-Methods and Functions/03-Function Practice Exercises.ipynb
+++ b/03-Methods and Functions/03-Function Practice Exercises.ipynb
@@ -147,12 +147,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## From stullis on python-forum.io:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lesser_of_two_evens(a,b):\n",
+    "    if a % 2 == 0 and b % 2 == 0:\n",
+    "        if b < a: \n",
+    "            return b\n",
+    "        else:\n",
+    "            return a\n",
+    "    else:\n",
+    "        if a < b:\n",
+    "            return b\n",
+    "        else:\n",
+    "            return a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Success? I guess so?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Check:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +201,7 @@
        "245"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,16 +212,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "52"
+       "10"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,16 +232,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "2"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +261,7 @@
        "5"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,57 +594,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "def old_macdonald(name):\n",
-    "    first_cap = name[0].capitalize()\n",
-    "    second_cap = name[3].capitalize()    \n",
-    "    # print(name)\n",
-    "    return second_cap"
+    "    first_cap = name[0].capitalize() + name[1:3]\n",
+    "    second_cap = name[3].capitalize() + name[4:]   \n",
+    "    together = first_cap + second_cap\n",
+    "    return together"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Eureka! Success! and without any help from the forums!!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'D'"
+       "'MacDonald'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +777,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Another attempt by Daniel with help from python-forum.io"
+    "## Another attempt by Daniel with help from python-forum.io:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-56-9ec94bd5d92d>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-56-9ec94bd5d92d>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    final_string = ' '.join(reversed(text.split()).capitalize()\u001b[0m\n\u001b[0m                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "def master_yoda(text):\n",
+    "    string = text.split()\n",
+    "    final_string = ' '.join(reversed(text.split()).capitalize()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The solution provided on the forums:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def master_yoda(text):\n",
+    "     return ' '.join(reversed(text.split())).capitalize()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Another solution from the forums:"
    ]
   },
   {
@@ -766,20 +829,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def master_yoda(text):\n",
+    "    string = text.split()\n",
+    "    string.reverse()\n",
+    "    return ' '.join(string).capitalize()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Success? I suppose?"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'home am I'"
+       "'Home am i'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,16 +866,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ready are We'"
+       "'Ready are we'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
