Update which should have been commited 4 weeks ago

--- a/02-Python Statements/09-Guessing Game Challenge.ipynb
+++ b/02-Python Statements/09-Guessing Game Challenge.ipynb
@@ -402,11 +402,66 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## What follows is something that I came up with (not someone else)  a month ago but which I didn't save here in this notebook. I retrived my  solution from the Python forums where I last left it. Here it is:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n",
+      "Pick a number: 58\n",
+      "WARM!\n",
+      "Pick another number: 12\n",
+      "Colder: You are farther away now than before\n",
+      "Pick another number: 61\n",
+      "Warmer: You are closer now than before\n",
+      "Pick another number: 60\n",
+      "You've won! The number is 60! \n",
+      "It took you 4 tries, but you got it. Congrats! \n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "num = int(random.randint(1,100)) \n",
+    "print(num)\n",
+    "guess = int(input(\"Pick a number: \")) # get a guess\n",
+    "if abs(guess - num) <= 10: # is the guess warm or cold?\n",
+    "    print(\"WARM!\")\n",
+    "else:\n",
+    "    print(\"COLD\")\n",
+    "if guess == num:\n",
+    "    print(\"You got it! The number is %d! \" % (num))\n",
+    "previous = guess # initilize the previous vairable for later\n",
+    "guess_count = int(1)\n",
+    "while guess != num: # loop until correct: \n",
+    "    guess_count += 1\n",
+    "    guess = int(input(\"Pick another number: \")) # get a guess \n",
+    "    if guess == num: #  is it correct?\n",
+    "        print(\"You've won! The number is %d! \" % (guess)) # announce the guess count\n",
+    "        print(\"It took you %d tries, but you got it. Congrats! \" % (guess_count))\n",
+    "        break # leave the loop\n",
+    "    diff_current = abs(guess - num)\n",
+    "    diff_prev = abs(previous - num)\n",
+    "    if diff_current <= diff_prev:\n",
+    "        print(\"Warmer: You are closer now than before\")\n",
+    "    if diff_prev <= diff_current:        \n",
+    "        print(\"Colder: You are farther away now than before\")\n",
+    "    if guess <= 0:\n",
+    "        print(\"Out of Bounds. Try again.\")\n",
+    "    if guess > 100:\n",
+    "        print(\"Out of Bounds. Try again.\")\n",
+    "    previous = guess #save the guess as previous"
+   ]
   },
   {
    "cell_type": "code",
